# fog_core

./: CMakeLists.txt  README.md  install.sh  package.xml
config/: fog_qos_overrides.yaml  tmux.conf
deb/: fastddsgen_1.0.0_v2.0.0-3-g694704f_amd64.deb  mission-engine_0.4.0-0~dirty~git20220209.68f3d9b_amd64.deb  mission-engine_2.0.0-8~git20210525.1f253ac_amd64.deb  ros-galactic-px4-msgs_3.0.0-18~git20220221.a20b036_amd64.deb  ros-galactic-px4-ros-com_3.0.0-0~git20220222.0cdaec9_amd64.deb
dotssh/: config  daniel  daniel.pub  stibipet  stibipet.pub
launch/: rosbag.py  rviz_simulation.py
launch/rosbag2_2022_03_17-16_34_07/: metadata.yaml  rosbag2_2022_03_17-16_34_07_0.db3
launch/rosbag2_2022_03_17-16_34_21/: metadata.yaml  rosbag2_2022_03_17-16_34_21_0.db3
plotjuggler/: cze03.xml  cze04.xml
rviz/: cze03_odometry_test.rviz  cze04.rviz  cze04_odometry_test.rviz  uae10.rviz
scripts/: action_client_navigation_node.py  install.sh  record.sh  shell_additions.sh
systemd/: agent_protocol_splitter.service  bumper.service  control_interface.service  micrortps_agent.service  navigation.service  octomap_server2.service  odometry2.service
tmux/: tmux.sh  tmux_camera.sh  tmux_fog.sh  tmux_hector.sh  tmux_rel6.sh  tmux_sac.sh
udev/: 99-usb-serial.rules
